--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "socket.io": "^4.7.0",
     "socket.io-client": "^4.7.0",
     "superjson": "1.12.2",
+    "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
